Add `com.sun.tools.javac.code` opens
Supports an Orchard feature.