@@ -9,14 +9,22 @@
   (boolean (re-find #"^1\.8\." (System/getProperty "java.version"))))
 
 (def javac-tree "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED")
+(def javac-code "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED")
 
 (def javac-tree-opens (str "--add-opens=" javac-tree))
+(def javac-code-opens (str "--add-opens=" javac-code))
 
 (def javac-tree-like #{javac-tree javac-tree-opens})
+(def javac-code-like #{javac-code javac-code-opens})
 
 (defn maybe-add-opens [xs]
   (cond-> xs
     (and (not (jdk8?))
          (not (some javac-tree-like xs)))
 
-    (conj javac-tree-opens)))
+    (conj javac-tree-opens)
+
+    (and (not (jdk8?))
+         (not (some javac-code-like xs)))
+
+    (conj javac-code-opens)))
